--- a/PRNAssG8/PRNAssG8/Views/Login/Lo.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Login/Lo.cshtml
@@ -71,6 +71,10 @@
                 Login
               </button>
              
+              <p>@ViewBag.Map</p>
+
+             
+
             </div>
           </form>
         </div>
