--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="icons">
+                    <a class="icons"  asp-controller="Login" asp-action="Lo">
                       <i class="ti-heart" aria-hidden="true"></i>
                     </a>
                   </li>
